# bodyweight-pose-estimation

./: .gitignore  README.md  app.py  pyproject.toml
data/processed/pullup/: VID_20221015_170933_Trim.csv  VID_20221015_171207_Trim.csv  VID_20221015_171347_Trim.csv  VID_20221015_171534_Trim.csv
data/processed/pushup/: VID_20221015_171647_Trim.csv  VID_20221015_171750_Trim.csv  VID_20221015_171911_Trim.csv  VID_20221015_173237_Trim.csv  petal_20221015_233600.csv  petal_20221015_233640.csv
data/processed/squat/: VID_20221015_172629_Trim.csv  VID_20221015_172722_Trim.csv  VID_20221015_173029_Trim.csv  VID_20221015_173317_Trim.csv  petal_20221015_233712.csv  petal_20221015_233751.csv
models/: model.pkl
notebooks/: draft.ipynb
src/data/: angle_series.py  coordinate_series.py  make_dataset.py  video.py
src/distances/: __init__.py  lcss.py
src/models/: model.py  train_model.py
src/resources/: joints.json  joints.py  smoothers.py
src/utils/: miscellanous.py  trigonometry.py
src/visualization/: __init__.py  visualize.py
