[tool.poetry]
name = "bwest"
version = "0.0.0"
description = "Classify live bodyweight exercises via 3D body pose estimation"
authors = ["Daniel Altunay"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.8.10"
matplotlib = "^3.6.1"
mediapipe = "^0.8.11"
numpy = "^1.23.3"
opencv-python = "^4.6.0.66"
pandas = "^1.5.0"
plotly = "^5.10.0"
scikit-learn = "^1.1.2"
seaborn = "^0.12.0"
tqdm = "^4.64.1"
tslearn = "^0.5.2"
tsmoothie = "^1.0.4"
h5py = "^3.7.0"
ipykernel = "^6.16.0"
pretty-errors = "^1.2.25"


[tool.poetry.group.dev.dependencies]
flake8-black = "^0.3.3"
isort = "^5.10.1"
mypy = "^0.982"
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"